# SPL-Assignment3

./: README.md
Client/: CMakeLists.txt  makefile
Client/include/: ReadFromSocketTask.h  connectionHandler.h
Client/src/: ReadFromSocketTask.cpp  connectionHandler.cpp  echoClient.cpp
Server/: BGRSclient  Courses.txt
Server/src/main/java/bgu/spl/net/impl/BGRSServer/: Course.java  Database.java  Message.java  MessageEncoderDecoderImpl.java  MessagingProtocolImpl.java  ReactorMain.java  TPCMain.java  User.java
Server/src/main/java/bgu/spl/net/impl/BGRSServer/Tester/: Tests.java
Server/src/main/java/bgu/spl/net/srv/: NonBlockingConnectionHandler.java  Reactor.java
